agregue una nueva funcion visual, ahora el input y btn enviar esta deshabitados hasta que nicie el juego

--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,25 @@ body {
 main {
   flex-grow: 1;
 }
+
+.estilo {
+  animation: cambiarColor 5s linear infinite;
+}
+
+@keyframes cambiarColor {
+  0% {
+    color: rgb(255, 0, 0);
+  }
+  25% {
+    color: rgb(0, 255, 0);
+  }
+  50% {
+    color: rgb(0, 0, 255);
+  }
+  75% {
+    color: rgb(255, 255, 0);
+  }
+  100% {
+    color: rgb(255, 0, 0);
+  }
+}
