--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,12 @@ main {
     color: rgb(255, 0, 0);
   }
 }
+
+img {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  object-fit: cover;
+  z-index: -1;
+}
